--- a/vignettes/custom.css
+++ b/vignettes/custom.css
@@ -9,6 +9,10 @@ h1, h2, h3, h4, h5, h6 {
   margin: 1.2em 0 0.6em 0;
 }
 
+h1.title.toc-ignore {
+  font-size: 22pt;
+}
+
 p {
   padding: 0 0 0 0;
 }
