--- a/vignettes/custom.css
+++ b/vignettes/custom.css
@@ -89,6 +89,7 @@ img {
 }
 
 p.caption {
+    font-size: 7pt;
     display:block;
     padding-left: 15px;
     padding-right: 15px;
@@ -126,6 +127,10 @@ pre {
   padding: 0 0 0 0;
   margin: 0 0 0.5em 0;
   color: #333333;
+}
+
+code.hljs {
+   font-size: 8pt; 
 }
 
 br.small {
